# aoe2-tex-com

./: .gitignore  Cargo.toml  pyproject.toml
.github/workflows/: CI.yml
sld_test/: m_utils.py  requirements.txt  test.py  test_decode.py  test_encode.py  test_preprocess.py  test_render.py
src/: bc1_transparency.rs  encode_decode.rs  format.rs  helper.rs  lib.rs  pack.rs  preprocess.rs  render.rs
stubs/aoe2_tex_com/: __init__.py  __init__.pyi  encode_decode.pyi  format.pyi  preprocess.pyi  render.pyi
